# mantis-shrimp

./: Cargo.toml  run.csv  test1_shattered.txt
src/: algorithms.rs  io.rs  main.rs  nquery.rs  setfunc.rs  skipcombs.rs  vecset.rs
