[package]
name = "vc-dim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
graphbench = { git = "https://github.com/microgravitas/graphbench.git" } 
itertools = "0.10.5"
clap = { version = "3.2.17", features = ["derive"] }

[dev-dependencies]
rand = "0.8.5"
